[gd_scene load_steps=2 format=3 uid="uid://dluxuylglywav"]

[ext_resource type="Script" path="res://scripts/main_menu/main_menu.gd" id="1_0rnx6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0rnx6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -92.0
offset_right = 252.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 15
disabled = true
text = "Play"

[node name="MultiplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 15
text = "Multiplayer"

[node name="ServerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 15
text = "Host Server"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 15
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ServerButton" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
